@@ -1,3 +1,9 @@
+2007-09-12  Danilo Šegan  <danilo@gnome.org>
+
+	* index.py (show_release): Add xmltemplate.
+	* templates/release-xml.tmpl: Added.
+	* dispatcher.py: Fix xml handling.
+
 2007-09-11  Claude Paroz  <claude@2xlibre.net>
 
 	* gnome-modules.xml.in:
